refactor(agent): 重构智能体流程定义和AI服务实现
- 重构 AgentFlow 类，添加 Builder 模式和入口节点支持
- 优化流程节点获取逻辑，支持多种起始节点策略
- 新增流式 SSE 接口，提供 aiChatStream 和 aiGeneratePostStream 方法
- 更新前端 AIAssistant 和 AiGenerate 组件使用流式接口
- 简化后端 AiService 和 AiServiceImpl 实现，引入 FlowDispatchService
- 优化执行历史查询返回安全的数据结构
- 改进前端生成状态 UI，简化流式内容展示效果